--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
-    <div id="main">Howdy</div>
+    <div id="main">You've been on this page for 0 seconds</div>
   </body>
   <script src="build/bundle.js"  charset="utf-8"></script>
 </html>
